@@ -4,13 +4,16 @@ Version 2.5-0
 NEW FEATURES
 - Add of the function selectgroups() to select most represented and/or
 most sensitive groups on which to focus for biological interpretation.
-- Add of an RNAseq data with batch effect (zebraf).
+- Add of an RNAseq data with batch effect (zebraf) with an example of use of 
+ComBat_seq{sva} to correct the batch effect.
 - Add of PCAdataplot() a function to visualize omic data.
 - Add of an column named maxychange (maximal absolute y change (up or down) 
 from the control) in the output of drcfit() (and so of bmdcalc() and bmdboot())
 - Add an argument named scaling in curvesplot() and bmdplotwithgradient()
 that enables the scaling of the shifted signal (y - y0) by dividing 
 it by maxychange (new output of drcfit).
+- Add the function formatdata4DRomics() to format data for DRomics from the 
+matrix of the signal measurements and the vector of observed/tested doses.
 
 BUG FIXES
 - Make sensitivityplot works even when BMDsummary is not given in input 
